# rppg_pipeline

./: .gitignore  README.md  TODO.md  download.py  pyproject.toml
benchmark/: metrics.py
data/: example_signal.txt
notebook/: onnx_model_example.ipynb
rppg/: main.py  visualisation.py
rppg/dataloader/: dataloader.py
rppg/hearrate_estimation/: hearrate_estimation.py  heartrate_estimation.py
rppg/region_of_interest/: __init__.py  landmark_based.py  onnx_segment_anything.py
rppg/rppg_algorithms/: chormicance.py  independent_component_analysis.py  plane_orthogonal_to_skin.py
rppg/signal_processing/: post_processing.py
