[tool.poetry]
name = "rppg"
version = "0.1.0"
description = "Vital parameter (e.g. heartrate) Estimation from video"
authors = ["Cheremy Pongajow <c.j.w.a.pongajow@student.tudelft.nl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"